# LabProg

./: .gitignore
AVL_Tree/: main  main.cpp  salve.hpp  tree.hpp
AVL_Tree/DicionarioAVL/: a.out  interface_trabalho_4.hpp  main  main.cpp  solucao.hpp
DataCompression/: bytes.txt  compressed  compressor.hpp  heap.hpp  huffman_noh.hpp  main  main.cpp
FastSubstringSearch/: instances.hpp  main.cpp  runtime.hpp  substring_search_algs.hpp
Sort Algorithms/: CMakeLists.txt  Makefile  instances.hpp  main.cpp  myrandomgen.hpp  pivot.hpp  programa  runtime.hpp  sort_algorithms.hpp  swap.hpp
